--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
@@ -3,19 +3,48 @@
 <head>
 	<meta charset='UTF-8' />
 	<style>
-		input, textarea {border:1px solid #CCC;margin:0px;padding:0px}
-
+		#container{
+			width: 100%;
+			margin: auto;
+		}
+		input,textarea
+		{
+			border:1px solid #CCC;
+			width: 100px;
+			height:20px;
+			margin-left:0px;
+			padding:0px
+		}
         #ip {line-height:20px}
         #port {line-height:20px}
-		#body {max-width:800px;margin:auto}
-		#log {width:100%;height:400px}
-		#message {width:100%;line-height:20px}
+		#body1 {width:450px; float: left; border: 1px solid black}
+		#log {width:400px;height:200px}
+		#message {width:400px;height:20px}
+		
+		#body2{
+			width:700px;
+			height:700px; 
+			background-color:white; 
+			border: 1px solid black;
+			float: right;
+			}
+		.ball {
+			width: 20px;
+			height: 20px;
+			background-color: red;
+			border-radius: 10px;
+		}
+		.paddle{
+			width: 100px;
+			height: 10px;
+			background-color: green;
+		}
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="fancywebsocket.js"></script>
 	<script>
 		var Server;
-
+		
 		function log( text ) {
 			$log = $('#log');
 			//Add text to log
@@ -60,18 +89,24 @@
 
 			Server.connect();
         }
-
+		
 	</script>
 </head>
 
 <body>
-	<div id='body'>
+<div id = 'container'>
+	<div id='body1'>
         Server ip: <input type='text' id='ip' name='ip'>
         Server port: <input type='text' id='port' name='port'>
         <button type="button" id='cntBtn' onclick="connect();">Connect</button>
 		<textarea id='log' name='log' readonly='readonly'></textarea><br/>
 		<input type='text' id='message' name='message' />
 	</div>
+	<div id ='body2'>
+		<div class ="ball" id = "ball"></div>
+		<div class ="paddle" id = "bottomPaddle"></div>
+	</div>
+</div>
 </body>
 
 </html>
