--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
@@ -23,7 +23,7 @@
 		#myCanvas{
 			width: 500px;
 			height: 500px;
-			background-color: gray;
+			background-color: white;
 			border: 1px solid black;
 			margin: 300px 20px;
 		}
@@ -47,7 +47,11 @@
 			//Autoscroll
 			$log[0].scrollTop = $log[0].scrollHeight - $log[0].clientHeight;
 		}
-
+		function updateBall(xPos,yPos)
+		{
+			x = xPos;
+			y = yPos;
+		}
 		function send( text ) {
 			Server.send( 'message', text );
 		}
@@ -60,7 +64,7 @@
 				if ( e.keyCode == 13 && this.value ) {
 					log( 'You: ' + this.value );
 					send( this.value );
-					send(uName);
+					send(uName.toString());
 					$(this).val('');
 				}
 			});
@@ -73,7 +77,7 @@
 
 			//OH NOES! Disconnection occurred.
 			Server.bind('close', function( data ) {
-                document.getElementById("dcBtn").disabled = false;
+                document.getElementById("cntBtn").disabled = false;
 				log( "Disconnected." );
 			});
 
@@ -81,6 +85,7 @@
 			Server.bind('message', function( payload ) 
 			{
 				log( payload );
+				//updateBall(5,5);
 			});
 
 			Server.connect();
@@ -128,12 +133,6 @@
 			Server.send("Position:" + y1.toString());
 		}
 		window.addEventListener('keydown',doKeyDown,true);
-		
-		function myFucnction()
-		{
-			var n = payload;
-			document.getElementById("demo").innerHTML = n;
-		}
 	</script>
 </head>
 
@@ -151,7 +150,7 @@
 		<div class ="paddle" id = "bottomPaddle"></div>
 	</div>
 	<p id = "demo"></p>
-	<button id = "payload" onclick="myFucnction()"> Print payload</button>
+	<button id = "payload" onclick="myFunction()"> Print payload</button>
 </div>
 <canvas id = "myCanvas">
 </canvas>
