--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
@@ -33,10 +33,10 @@
 	<script>
 		
 		var Server;
-		var x=150;
-		var y=150;
-		var x1 = 20;
-		var y1 = 20;
+		var xBall=150;
+		var yBall=150;
+		var xPaddle = 20;
+		var yPaddle = 20;
 		var dx=5;
 		var dy=5;
 		
@@ -54,6 +54,16 @@
 			var yP;
 			var pLoad = text.split(":").pop();
 			
+			var index;
+			for(index = 0; index < pLoad.length; index++)
+			{
+				var temp = pLoad.charAt(index);
+				if(temp == ",")
+				{
+					xP = pLoad.substring(0,index);
+					yP = pLoad.substring(index + 1,pLoad.length);
+				}
+			}
 			updateBall(parseInt(xP),parseInt(yP));
 		}
 		function updateBall(xPos,yPos)
@@ -97,7 +107,8 @@
 			Server.bind('message', function( payload ) 
 			{
 				//log( payload );
-				//slice payload to get info for ball
+				
+				//slice payload to get info for gamestate
 				ProcessPayLoad(payload);
 			});
 
