--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
@@ -154,7 +154,7 @@
 				}
 				break;
 			}
-			Server.send("Position:" + y1.toString());
+			Server.send("Position:" + yPaddle.toString());
 		}
 		window.addEventListener('keydown',doKeyDown,true);
 	</script>
