--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
@@ -165,7 +165,7 @@
 				}
 				break;
 			}
-			Server.send("Position:" + xPaddle.toString() + "," + yPaddle.toString());
+			Server.send("Position:" + yPaddle.toString());
 		}
 		window.addEventListener('keydown',doKeyDown,true);
 	</script>
