--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
@@ -46,6 +46,8 @@
 		var dx=5;
 		var dy=5;
 		
+		var connected = false;
+		
 		function log( text ) {
 			$log = $('#log');
 			//Add text to log
@@ -98,6 +100,7 @@
 				uName = document.getElementById("name").value;
 				log("Username: " + uName);
 				send("Name:" + uName.toString());
+				connected = true;
 			});
 
 			//OH NOES! Disconnection occurred.
@@ -142,22 +145,25 @@
 		
 		function doKeyDown(evt)
 		{
-			switch (evt.keyCode) 
+			if (connected)
 			{
-			case 87:  /* W was pressed */
-				if (yPaddle - dy >= 0)
-				{ 
-					yPaddle -= dy;
+				switch (evt.keyCode) 
+				{
+				case 87:  /* W was pressed */
+					if (yPaddle - dy >= 0)
+					{ 
+						yPaddle -= dy;
+					}
+					break;
+				case 83:  /* S was pressed */
+					if (yPaddle + dy <= 480)
+					{ 
+						yPaddle += dy;
+					}
+					break;
 				}
-				break;
-			case 83:  /* S was pressed */
-				if (yPaddle + dy <= 480)
-				{ 
-					yPaddle += dy;
-				}
-				break;
+				send("Position:" + yPaddle.toString());
 			}
-			Server.send("Position:" + yPaddle.toString());
 		}
 		window.addEventListener('keydown',doKeyDown,true);
 	</script>
