--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
@@ -39,7 +39,7 @@
 		var yBall=150;
 		
 		var xPaddle = 20;
-		var yPaddle = 0;
+		var yPaddle = 250;
 		var paddleW = 5;
 		var paddleH = 20;
 		
@@ -157,7 +157,7 @@
 				}
 				break;
 			}
-			Server.send("Position:" + yPaddle.toString());
+			send("Position:" + yPaddle.toString());
 		}
 		window.addEventListener('keydown',doKeyDown,true);
 	</script>
