Fixed paddle offset

--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
@@ -65,7 +65,7 @@
 			var res = pLoad.split(";");
 			Pos = res[0].split(",");
 			updateBall(parseInt(Pos[0]),parseInt(Pos[1]));
-			log(res[1]);
+			//log(res[1]);
 		}
 		function updateBall(xPos,yPos)
 		{
