New canvas parameters

--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client.html
@@ -101,7 +101,7 @@
 
 			//OH NOES! Disconnection occurred.
 			Server.bind('close', function( data ) {
-                document.getElementById("dcBtn").disabled = false;
+                document.getElementById("cntBtn").disabled = false;
 				log( "Disconnected." );
 			});
 
