--- a/ICS167-SocketDemonstration/demo4-client/chatroom_client 2.0.html
+++ b/ICS167-SocketDemonstration/demo4-client/chatroom_client 2.0.html
@@ -9,7 +9,7 @@
 <center><body>  
     
     <div class="serverContainer">
-        <div>IP: <input type="text" name="ip" value="127.0.0.1" id="ipEntry"></div>
+        <div>IP: <input type="text" name="ip" value="169.234.25.177" id="ipEntry"></div>
         <div>Port: <input type="text" name="port" value="8082" id="portEntry"></div>
         <div>Name: <input type="text" name="name" value="Bob" id="nameEntry"></div>
         <div><button type="button" onclick="connect();", id="connectButton">Connect</button></div>
@@ -320,12 +320,16 @@
 					//myGameArea.start();
 					isGamePlaying = true;
 				}
-				else if(payload.split(":")[0] == "Disonnect")
+				else if(payload.split(":")[0] == "Disconnect")
 				{
 					//remove opponent at index.
+					var index = payload.split(":")[1];
+					opponents[parseInt(index)].Paddle = new paddle(0,0,"#ffffff",0,0);
+					opponents[parseInt(index)].Colors = "#ffffff";
+					opponents[parseInt(index)].Paddle.update();
 					aLength = 0;
 					isGamePlaying = false;
-					for(i = 0; i < opponents.length < ++i)
+					for(i = 0; i < opponents.length ; ++i)
 					{
 						opponents.slice(i,1);
 					}
@@ -344,6 +348,7 @@
         
         function disconnect()
 		{
+			myGameArea.clear();
 			document.getElementById("updateBar").innerHTML = "Disonnect";
 			Server.disconnect();
 			readyStatus = false;
